# web2RU

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PLANS.md  README.md  SECURITY.md  TECHNICAL_SPEC_WEB2RU.md  TESTING.md  pyproject.toml
.github/workflows/: ci.yml
agents/roles/: architect.md  implementer.md  release_manager.md  security_reviewer.md  spec_analyst.md  test_engineer.md
agents/workflows/: bugfix_triage.md  feature_change.md  live_regression.md  mvp_delivery.md  release.md
docs/: TECHNICAL_SPEC_WEB2RU.md  architecture.md  codex_alignment.md  openai_responses_and_translation.md  requirements.md  risks_and_assumptions.md
docs/execplans/: link_surfing_execplan.md  medium_auth_execplan.md  mvp_implementation_execplan.md  openai_session_stability_execplan.md  surf_navigation_comfort_execplan.md  translation_quality_execplan.md
src/web2ru/: __init__.py  cli.py  config.py  env.py  models.py  utils.py
src/web2ru/assets/: scan.py  (+5 more)
tests/data/: regress_urls.txt
tests/e2e/: test_cli_smoke.py
tests/integration/: test_offline_pipeline.py
tests/unit/: test_apply_attrs.py  test_apply_blocks.py  test_batcher.py  test_env_loader.py  test_extract_blocks.py  test_fetch_missing.py  test_freeze_js.py  test_interstitial.py  test_online_render_medium_auth.py  test_persistent_context.py  test_rewrite_css.py  test_rewrite_html.py  test_session_policy.py  test_surf_router.py  test_surf_server.py  test_surf_session.py  test_token_protector.py  test_translate_validate.py  test_translator_context.py  test_utils_slug.py
(+27 files in other folders)
